--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             this.currentOperand = this.currentOperand.toString() + number.toString();
         }
 
+        getDisplayNumber(number){
+            return number;
+        }
+
         chooseOperation(operation) {
             if (this.currentOperand === '') {
                 return;
@@ -237,234 +241,3 @@
 </script>
 
 </html>
-
-
-
-
-
-
-
-<!-- <!-- 
-Create a basic HTML calculator with buttons for each digit, each of the above functions and an “Equals” key.
-
-// CHECK LIST
-
-1:  [ ] STYLE AND SHAPE BUTTONS
-2:  [ ] COLORS
-3:  [ ] MOBILE FORMATTING CHECK
-4:  [ ] HOOK-UP FUNCTION BUTTONS
-        - THESE WILL OUTPUT TO THE CONSOLE
-5:  [ ] HOOK-UP MAIN DISPLAY
-        - BUILD METHOD TO UPDATE THIS.
-6:  [ ] HOOK-UP NUMBER BUTTONS
-7:  [ ] BUILD MEMORY FEATURES
-
-
-// ADDITIONAL FEATURES.
-
-1:  [ ] HAVE A LOG ON THE SIDE WITH THE PAST 16 OPERATIONS. - I WOULD ACTUALLY USE THIS FOR ACCOUNTING A LOT.
-
-// TODO-
-
-[ ] TWEAK BUTTON CSS
--->
-
-<!-- <html> -->
-<!-- 
-<style>
-    body {
-        background-color: darkslategray;
-    }
-
-    .button {
-        border: 1px outset blue;
-        background-color: lightBlue;
-        height: 50px;
-        width: 50px;
-        cursor: pointer;
-    }
-
-    .button-row {
-        display: grid;
-        grid-template-columns: repeat(4, 50px);
-    }
-
-    .buttons-box {
-        /* display: block; */
-        /* grid-template-rows: repeat(5, 1fr); */
-        /* margin: auto; */
-    }
-
-    .center {
-        display: block;
-        margin: auto;
-    }
-
-    .results-display {
-        border: 1px black solid;
-        text-align: right;
-    }
-
-    h2.color-text {
-        color: aliceblue;
-        padding-right: 1em;
-    }
-
-
-    .wrapper {
-        /* display: grid; */
-        width: 250px;
-        background-color: darkolivegreen;
-        /* grid-template-columns: repeat(1f, 1fr); */
-    }
-</style> -->
-<!-- 
-<style>
-    .wrapper {
-        border: 1px solid black;
-        /* margin: auto; */
-        width: 75%;
-    }
-
-    .results-display {
-        border: 1px solid red;
-        text-align: right;
-    }
-
-    .button {
-        border: 1px dotted green;
-        /* background-color: lightBlue; */
-        height: 50px;
-        width: 50px;
-        cursor: pointer;
-    }
-
-    .buttons-box {
-        /* display: block;
-        margin: auto; */
-        border: 1px solid blue;
-
-    }
-
-    .button-row {
-        display: grid;
-        grid-template-columns: repeat(4, 50px);
-    }
-</style> -->
-<!-- 
-<body>
-
-
-    <div class="wrapper center">
-
-        <div class="results-display">
-            <h2 class="color-text" id="main-display">000</h2>
-        </div>
-
-        <div class="buttons-box center ">
-            <div class="button-row">
-                <button class="button" id="button-ce">CE</button>
-                <button class="button" id="button-c">C</button>
-                <button class="button" id="button-del">DEL</button>
-                <button class="button" id="button-divide">/</button>
-            </div>
-            <div class="button-row">
-                <button class="button" id="button-7">7</button>
-                <button class="button" id="button-8">8</button>
-                <button class="button" id="button-9">9</button>
-                <button class="button" id="button-multiply">X</button>
-            </div>
-            <div class="button-row">
-                <button class="button" id="button-4">4</button>
-                <button class="button" id="button-5">5</button>
-                <button class="button" id="button-6">6</button>
-                <button class="button" id="button-subtract">-</button>
-            </div>
-            <div class="button-row">
-                <button class="button" id="button-1">1</button>
-                <button class="button" id="button-2">2</button>
-                <button class="button" id="button-3">3</button>
-                <button class="button" id="button-add">+</button>
-            </div>
-            <div class="button-row">
-                <button class="button" id="button-pos-neg">+-</button>
-                <button class="button" id="button-0">0</button>
-                <button class="button" id="button-decimal">.</button>
-                <button class="button" id="button-equals">=</button>
-            </div>
-
-        </div>
-
-
-    </div>
-
-</body>
-<script> -->
-<!-- // VARIABLES
-    let TESTING = false;
-
-    let mainDisplay = document.getElementById('main-display');
-
-    const register = 0; // This holds the other number.
-
-    // OPERATIONS
-    function operate(op, a, b) {
-        switch (op) {
-            case '+':
-                return add(a, b);
-            case '-':
-                return sub(a, b);
-            case '*':
-                return mult(a, b);
-            case '/':
-                return divi(a, b);
-        }
-    }
-
-    function add(a, b) {
-        return a + b;
-    }
-
-    function sub(a, b) {
-        return a - b;
-    }
-
-    function mult(a, b) {
-        return a * b;
-    }
-
-    function divi(a, b) {
-        return a / b;
-    }
-
-    function flipNegativeAndPosition(_numberToFlip) {
-        return _numberToFlip * -1;
-    }
-
-    function clearEverything() {
-        // CLEARS ALL MEMORY.
-    }
-
-    function clearCurrent() {
-        // CLEARS JUST THE CURRENT INTEGER.
-    }
-
-
-    if (TESTING) {
-
-        let _a = 3;
-        let _b = 2;
-
-        console.log(operate('+', _a, _b));
-        console.log(operate('-', _a, _b));
-        console.log(operate('*', _a, _b));
-        console.log(operate('/', _a, _b));
-
-        console.log('add ' + add(a, b));
-        console.log('subtract ' + sub(a, b));
-        console.log('mult ' + mult(a, b));
-        console.log('divide ' + divi(a, b));
-    } -->
-<!-- </script> -->
-
-<!-- </html> -->
